--- a/QuotesApp/QuotesApp.iOS/QuotesApp.iOS.csproj
+++ b/QuotesApp/QuotesApp.iOS/QuotesApp.iOS.csproj
@@ -126,6 +126,9 @@
     <PackageReference Include="FreshMvvm">
       <Version>3.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Polly">
+      <Version>7.2.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.968" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
