--- a/QuotesApp/QuotesApp.Android/QuotesApp.Android.csproj
+++ b/QuotesApp/QuotesApp.Android/QuotesApp.Android.csproj
@@ -57,6 +57,9 @@
     <PackageReference Include="FreshMvvm">
       <Version>3.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.7.0.968" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
