--- a/QuotesApp/QuotesApp.iOS/QuotesApp.iOS.csproj
+++ b/QuotesApp/QuotesApp.iOS/QuotesApp.iOS.csproj
@@ -142,4 +142,10 @@
       <Name>QuotesApp</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\copy.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\share.png" />
+  </ItemGroup>
 </Project>
